# push_swap

./: .gitignore  CMakeLists.txt  Makefile  big_sort.c  big_sort_key.c  calculate_cost.c  check_argum.c  checker.c  first_step_utils.c  five_sort.c  init_desired_pool.c  main.c  make_index.c  parser.c  push_swap  push_swap.h  recost_desired_pool_utils.c  resize_desired_pool.c  second_step_utils.c  size_desired_pool.c  small_sort.c
bonus/: checker.c  get_next_line.c  get_next_line.h  get_next_line_utils.c
includes/: checker.h  movements.h  push_swap.h
movements/: pa.c  ra.c  rra.c  sa.c
src/: big_sort.c  calculate_cost.c  check_argum.c  first_step_utils.c  five_sort.c  ft_lstdelone.c  init_desired_pool.c  main.c  make_index.c  parser.c  push_swap.c  recost_desired_pool_utils.c  resize_desired_pool.c  second_step_utils.c  size_desired_pool.c  small_sort.c
utils/: big_sort.c  lst_utils.c  push_swap_utils.c
